lab1/Test/L1-A-13-14.output
Error Type A at Line 1
Error Type B at Line 4
Error Type B at Line 9
Error Type A at Line 12
Error Type A at Line 15
Error Type B at Line 16
Error Type A at Line 18
Error Type B at Line 20
Error Type B at Line 30
Error Type A at Line 31
Error Type B at Line 36
Error Type B at Line 37
